<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.capstonedesign.login.LoginViewModel" />
        <variable
            name="activity"
            type="com.example.capstonedesign.login.LoginActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity"
        android:background="@drawable/background"
        >

        <ImageView
            android:id="@+id/logo_imageview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:src="@drawable/logo_remove_back"/>

        <LinearLayout
            android:id="@+id/edittext_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_imageview"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:text="@={viewModel.id}"
                    android:id="@+id/edittext_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:text="@={viewModel.password}"
                    android:id="@+id/edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_linearlayout"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:onClick="@{() -> viewModel.loginWithSignupEmail()}"
                android:id="@+id/email_login_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/signin_email"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:onClick="@{() -> activity.findId()}"
                android:id="@+id/find_id_password_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/find_id_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:onClick="@{(view) -> viewModel.loginGoogle(view)}"
                android:id="@+id/google_login_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_signin_google"
                android:text="@string/signin_google" />

            <androidx.appcompat.widget.AppCompatButton
                android:onClick="@{() -> activity.loginFacebook()}"
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_signin_facebook"
                android:text="@string/signin_facebook" />


        </LinearLayout>
    </RelativeLayout>
</layout>